# doceria

./: .env.example  .gitignore  INSTALLATION-macOS.md  LICENSE  LISEZ-MOI — Première ouverture.txt  README.md  index.html  package-lock.json  package.json  vite.config.js
docs/: ARCHITECTURE.md  KICKOFF.md  MOODLE-IMPLEMENTATION-ROADMAP.md  MOODLE-TEST-PLAN.md  POINT-DE-REPRISE.md  RAG-V2-ilaas.md  ROADMAP-V2.md  ROADMAP.md  SETUP.md  SPEC.md  index.html  style.css
src/: api.js  conversations.js  documents.js  main.js  state.js  styles.css  theme.js  ui.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ilaas.rs  keychain.rs  lib.rs  main.rs  moodle.rs  rag.rs  settings.rs  update.rs
